--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
 
 .section {
   min-height: 100vh;
+  width: 100%;
   display: grid;
   place-items: center;
   background-color: #0e1323;
@@ -29,7 +30,6 @@ html {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  width: 100%;
   gap: 3.2rem;
 }
 
@@ -174,4 +174,61 @@ html {
 .when {
   font-size: 1.5rem;
   line-height: 1.8rem;
+}
+
+@media screen and (max-width: 48em) {
+  .container {
+    max-width: 61.2rem;
+    width: 100%;
+  }
+
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 2.4rem;
+    width: 100%;
+  }
+
+  .section {
+    display: block;
+  }
+
+  .account {
+    grid-column: 1 / -1;
+    grid-row: 1 / 4;
+  }
+
+  .acc-info {
+    padding: 3.2rem;
+    display: flex;
+    align-items: center;
+    gap: 2.4rem;
+  }
+
+  .acc-info img {
+    margin-bottom: 0;
+    width: 6.4rem;
+    height: auto;
+  }
+
+  .acc-name {
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+    font-weight: 100;
+  }
+
+  .list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 7rem;
+  }
+
+  .list-item:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .content {
+    padding: 2.4rem;
+  }
 }
